...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lAG-PD-oka">
                                <rect key="frame" x="30" y="504" width="333" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="zA7-Bs-A8a"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Take a Pic"/>
                                <connections>
                                    <action selector="takeAPicAction:" destination="lP3-Kr-7dO" eventType="touchUpInside" id="PNO-zh-7wk"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title for Image" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CQi-N3-Ix2">
                                <rect key="frame" x="30" y="409" width="333" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="YR2-Gr-vZm"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hHZ-VG-0Vf">
                                <rect key="frame" x="30" y="564" width="333" height="25"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="25" id="1EN-CP-Jkp"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Get location"/>
                                <connections>
                                    <action selector="getLocation:" destination="lP3-Kr-7dO" eventType="touchUpInside" id="wB9-fh-b7V"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pIz-jp-ANQ">
                                <rect key="frame" x="30" y="609" width="333" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="hEr-fM-JTA"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Upload"/>
                                <connections>
                                    <action selector="uploadAction:" destination="lP3-Kr-7dO" eventType="touchUpInside" id="uJ8-rW-AF3"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Kje-8v-wYk"/>
...
                            <constraint firstItem="Kje-8v-wYk" firstAttribute="trailing" secondItem="lAG-PD-oka" secondAttribute="trailing" constant="30" id="vyf-Yy-Aso"/>
                            <constraint firstItem="hHZ-VG-0Vf" firstAttribute="leading" secondItem="Kje-8v-wYk" secondAttribute="leading" constant="30" id="wyy-KU-XAK"/>
                            <constraint firstItem="fqH-Ax-R7s" firstAttribute="leading" secondItem="Kje-8v-wYk" secondAttribute="leading" constant="30" id="xoC-v9-ZXB"/>
                            <constraint firstItem="Kje-8v-wYk" firstAttribute="trailing" secondItem="CQi-N3-Ix2" secondAttribute="trailing" constant="30" id="zpH-v8-aEG"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Take a pic" selectedImage="camera" catalog="system" id="kos-Wi-wms"/>
                    <connections>
                        <outlet property="imgView" destination="RTE-SO-M9K" id="9Yg-AR-b6F"/>
                        <outlet property="lblLocation" destination="fqH-Ax-R7s" id="1MB-NZ-ydC"/>
                        <outlet property="txtTitle" destination="CQi-N3-Ix2" id="qgg-aa-yih"/>
                        <outlet property="uploadAction" destination="pIz-jp-ANQ" id="Me2-QU-SzU"/>
                    </connections>
...
                            <constraint firstItem="nGa-cp-V8v" firstAttribute="bottom" secondItem="aYK-Xf-OSa" secondAttribute="bottom" id="NDK-Kn-inI"/>
                            <constraint firstItem="nGa-cp-V8v" firstAttribute="trailing" secondItem="aYK-Xf-OSa" secondAttribute="trailing" id="Rm1-A6-Y1H"/>
                            <constraint firstItem="aYK-Xf-OSa" firstAttribute="top" secondItem="nGa-cp-V8v" secondAttribute="top" id="asN-lb-bbB"/>
                            <constraint firstItem="aYK-Xf-OSa" firstAttribute="leading" secondItem="nGa-cp-V8v" secondAttribute="leading" id="fvj-Bg-DWe"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" selectedImage="house" catalog="system" id="u3K-ux-wRY"/>
                    <connections>
                        <outlet property="tblView" destination="aYK-Xf-OSa" id="eOu-Mr-mPp"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="kcZ-LP-O73" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
