...

        // Do any additional setup after loading the view.
    }
    
    
    @IBAction func takeAPicAction(_ sender: Any) {
        let actionSheet = UIAlertController(title: "Take a picture", message: "Something", preferredStyle: .alert)
        
        let cameraAction = UIAlertAction(title: "Camera", style: .default){
            action in
            if UIImagePickerController.isSourceTypeAvailable(.camera){
                            let imagePicker = UIImagePickerController()
                            imagePicker.delegate = self
                            imagePicker.sourceType = .camera
                            imagePicker.allowsEditing = false
                            self.present(imagePicker, animated: true)
                        }
        }
        let photoLibAction = UIAlertAction(title: "Photo Library", style: .default){
            action in
            
            if UIImagePickerController.isSourceTypeAvailable(.photoLibrary){
                            let imagePicker = UIImagePickerController()
                            imagePicker.delegate = self
                            imagePicker.sourceType = .photoLibrary
...
